# cmake-test

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt
include/: test.hh
scripts/: run.sh
src/: CMakeLists.txt  main.cc  test.cc
